Mon May 21 14:01:13 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c:
	- fix cursor updates, this undo part of change of src/odbc/odbc.c
	  from 1.331 to 1.332, log:
	  Wed Jul 21 16:50:11 CET 2004
	   : some fix for SQLFetch and multiple rows
	  but tests works
	* src/odbc/unittests/cursor1.c: improve

Mon May 21 10:40:40 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor1.c: improve test

Thu May 17 12:32:33 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_checks.c:
	* src/odbc/odbc_util.c:
	- avoid core
	- fix and check invalid values of num_param_rows and curr_param_row

Thu May 17 09:18:19 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/warning.c: improve and comments

Wed May 16 14:23:00 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/sql2tds.c:
	- support row binding in RPC
	- reuse new odbc_get_octet_len

Wed May 16 14:23:00 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild: minor updates

Mon May 14 16:04:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: remove copy error

Mon May 14 10:16:37 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c src/tds/mem.c src/tds/token.c src/tds/util.c:
	- give proper errors on protocol autodiscovery

Wed May 09 10:31:56 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: finish ODBC timeout

Fri May 03 14:54:58 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/const_params.c:
	- reset statement to be sure to cleanup

Wed May 02 16:54:13 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- use query timeout from freetds.conf

Mon Apr 30 15:14:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>