@@ -10,7 +10,6 @@ Cursor and dynamic
 libTDS should handle real cursor/dynamic memory deallocation
 search for tds_alloc_cursor, tds_free_cursor and similar for dynamic
 cursor too complicate... reduce all states, handle more in libTDS
-Finish odbc cursors. 
 Tests:
  - multiple RPCs check returns (possible??)
    (see odbc_set_return_status, odbc_set_return_params and odbc_get_param_len
